feat:new feature

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,6 +1,6 @@
 {
 	"Hero": {
-		"h1": "快速制作落地页",
+		"h1": "TikTok 资金计算器",
 		"h2": "这是一个免费、开源且功能强大的落地页模板，适用于SaaS项目，它将帮助您更快地启动您的创业项目。"
 	},
 	"Feature": {
