--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
 	"Hero": {
-		"h1": "Make Landing Page Faster",
+		"h1": "TikTok Money Calculator",
 		"h2": "This is a free, open-source and powerful landing page template for saas project, it will help you to make your startup faster."
 	},
 	"Feature": {
