--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,40 +1,13 @@
 {
 	"Hero": {
-		"h1": "ランディングページをより速く作成",
-		"h2": "これは無料、オープンソースで強力なランディングページテンプレートで、SaaSプロジェクトに最適です。スタートアップをより速くするのに役立ちます。"
-	},
-	"Feature": {
-		"h2": "私たちの特徴",
-		"h3": "inWindランディングページテンプレートの特徴",
-		"description1": "素晴らしいランディングページテンプレート。",
-		"description2": "Next.JS、DaisyUI、TailwindCSSなどの強力なライブラリをベースにしています。",
-		"description3": "完全にオープンソースで、完全に無料です。"
-	},
-	"Pricing": {
-		"h2": "私たちの価格",
-		"h3": "プランを選択してください",
-		"description": "ニーズに最も合うプランを選択してください。",
-		"doYouLike": "このランディングページテンプレートは好きですか？",
-		"follow": "私のTwitterをフォローしてください。"
-	},
-	"Testimonial": {
-		"h2": "お客様の声",
-		"h3": "愛の壁",
-		"description1": "このランディングページテンプレートを使用し、あなたのTwitterでそれを推奨する場合、",
-		"description2": "お知らせください",
-		"description3": "、あなたのツイートと推奨をここに表示します。"
+	  "h1": "TikTok収益計算機",
+	  "h2": "TikTok収益計算機は、人気のソーシャルメディアプラットフォームでコンテンツクリエイターやインフルエンサーが潜在的な収益を見積もるための必須ツールです。",
+	  "btn": "収益を計算する",
+	  "des1": "無料",
+	  "des2": "リアルタイムデータ",
+	  "des3": "計算精度"
 	},
 	"Faq": {
-		"h2": "よくある質問",
-		"h3": "よくある質問",
-		"description": "ここにはよくある質問のいくつかを掲載しています。"
-	},
-	"CTA": {
-		"h2": "今すぐランディングページを構築",
-		"h3": "ランディングページを構築し、あなたの製品を表示し、収益化を開始しましょう！"
-	},
-	"CTAButton": {
-		"btn1": "ソースコードを取得",
-		"btn2": "ドキュメントを表示"
+	  "h3": "TikTok収益計算機のFAQ"
 	}
-}
+}  
