--- a/locales/en.json
+++ b/locales/en.json
@@ -1,30 +1,13 @@
 {
 	"Hero": {
 		"h1": "TikTok Money Calculator",
-		"h2": "The TikTok Money Calculator is an essential tool for content creators and influencers looking to estimate their potential earnings on the popular social media platform."
-	},
-	"Feature": {
-		"h3": "Features of TikTok Money Calculator"
-	},
-	"Pricing": {
-		"h2": "Our Pricing",
-		"h3": "Choose Your Plan",
-		"description": "Select the plan that best fits your needs.",
-		"doYouLike": "你喜欢这个落地页模板吗？",
-		"follow": "关注我的推特。"
-	},
-	"Testimonial": {
-		"h3": "FeedBack of TikTok Money Calculator"
+		"h2": "The TikTok Money Calculator is an essential tool for content creators and influencers looking to estimate their potential earnings on the popular social media platform.",
+		"btn": "Calculate earnings",
+		"des1": "Free",
+		"des2": "Real-time Data",
+		"des3": "Calculation accuracy"
 	},
 	"Faq": {
 		"h3": "FAQ of TikTok Money Calculator"
-	},
-	"CTA": {
-		"h2": "Start to calculate your TikTok Money",
-		"h3": "Build your landing page, show your product, and start earning!"
-	},
-	"CTAButton": {
-		"btn1": "Try TikTok Money Calculator for free",
-		"btn2": "View Docs"
 	}
 }
