--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,4 +1,9 @@
 {
+	"SEO":{
+		"title": "حاسبة أرباح تيك توك - مجانًا وبدون تسجيل دخول",
+		"keywords": "حاسبة أرباح تيك توك, حاسبة أرباح تيك توك, حساب الأرباح على تيك توك, كيفية حساب الأرباح على تيك توك",
+		"description": "حاسبة أرباح تيك توك هي أداة أساسية للمبدعين والمؤثرين الذين يرغبون في تقدير أرباحهم المحتملة على منصة التواصل الاجتماعي الشهيرة."
+	},
 	"Hero": {
 	  "h1": "آلة حاسبة لأرباح تيك توك",
 	  "h2": "آلة حاسبة لأرباح تيك توك هي أداة أساسية لمنشئي المحتوى والمؤثرين الذين يتطلعون إلى تقدير أرباحهم المحتملة على منصة التواصل الاجتماعي الشهيرة.",
