--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,9 @@
 {
+	"SEO":{
+		"title": "TikTok Money Calculator——Free & No Login Required", 
+		"keywords": "TikTok Money Calculator, TikTok earnings calculator, calculate TikTok income, how to calculate money on TikTok",
+		"description":"The TikTok Money Calculator is an essential tool for content creators and influencers looking to estimate their potential earnings on the popular social media platform" 
+	},
 	"Hero": {
 		"h1": "TikTok Money Calculator",
 		"h2": "The TikTok Money Calculator is an essential tool for content creators and influencers looking to estimate their potential earnings on the popular social media platform.",
