--- a/locales/es.json
+++ b/locales/es.json
@@ -1,4 +1,9 @@
 {
+	"SEO":{
+		"title": "Calculadora de Dinero de TikTok - Gratis y Sin Necesidad de Iniciar Sesión",
+		"keywords": "Calculadora de Dinero de TikTok, Calculadora de ganancias de TikTok, calcular ingresos en TikTok, cómo calcular dinero en TikTok",
+		"description": "La Calculadora de Dinero de TikTok es una herramienta esencial para creadores de contenido e influencers que buscan estimar sus posibles ganancias en la popular plataforma de redes sociales."
+	},
 	"Hero": {
 	  "h1": "Calculador de Ingresos TikTok",
 	  "h2": "El Calculador de Ingresos TikTok es una herramienta esencial para creadores de contenido e influencers que buscan estimar sus ganancias potenciales en la popular plataforma de redes sociales.",
