--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,4 +1,9 @@
 {
+	"SEO":{
+		"title": "Calculateur de revenus TikTok——Gratuit et sans inscription requise",
+		"keywords": "Calculateur de revenus TikTok, calculateur de gains TikTok, calculer les revenus sur TikTok, comment calculer l'argent sur TikTok",
+		"description": "Le Calculateur de revenus TikTok est un outil essentiel pour les créateurs de contenu et les influenceurs souhaitant estimer leurs gains potentiels sur la populaire plateforme de médias sociaux."
+	},
 	"Hero": {
 		"h1": "Calculateur de Revenus TikTok",
 		"h2": "Le Calculateur de Revenus TikTok est un outil essentiel pour les créateurs de contenu et les influenceurs cherchant à estimer leurs gains potentiels sur la populaire plateforme de médias sociaux.",
