--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,4 +1,9 @@
 {
+	"SEO":{
+		"title": "TikTokマネー計算機——無料でログイン不要",
+		"keywords": "TikTokマネー計算機, TikTok収益計算機, TikTokの収益を計算する, TikTokでお金を稼ぐ方法",
+		"description": "TikTokマネー計算機は、人気のソーシャルメディアプラットフォームで潜在的な収益を見積もるために、コンテンツクリエイターやインフルエンサーにとって欠かせないツールです。"
+	},
 	"Hero": {
 	  "h1": "TikTok収益計算機",
 	  "h2": "TikTok収益計算機は、人気のソーシャルメディアプラットフォームでコンテンツクリエイターやインフルエンサーが潜在的な収益を見積もるための必須ツールです。",
