--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,4 +1,9 @@
 {
+	"SEO":{
+		"title": "Калькулятор доходов TikTok — бесплатно и без регистрации",
+		"keywords": "Калькулятор доходов TikTok, калькулятор заработка TikTok, рассчитать доходы TikTok, как рассчитать деньги на TikTok",
+		"description": "Калькулятор доходов TikTok — это важный инструмент для создателей контента и инфлюенсеров, которые хотят оценить свои потенциальные доходы на популярной социальной платформе."
+	},
 	"Hero": {
 		"h1": "Калькулятор доходов TikTok",
 		"h2": "Калькулятор доходов TikTok — это незаменимый инструмент для создателей контента и инфлюенсеров, которые хотят оценить свой потенциальный доход на популярной социальной платформе.",
