--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,4 +1,9 @@
 {
+	"SEO":{
+		"title": "TikTok收入计算器——免费且无需登录",
+		"keywords": "TikTok收入计算器, TikTok收益计算器, 计算TikTok收入, 如何计算TikTok上的收入",
+		"description": "TikTok收入计算器是内容创作者和网红们估算其在这一热门社交平台上潜在收入的重要工具。"
+	},
 	"Hero": {
 	  "h1": "TikTok收益计算器",
 	  "h2": "TikTok收益计算器是内容创作者和网红估算他们在这一流行社交媒体平台上的潜在收入的必备工具。",
